# TouchController-Monorepo

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  maven_install.json  neoforge_pin.txt  neoform_pin.txt
blazesdl/api/: BUILD.bazel  BlazeSDLAPI.java  BlazeSDLApiHolder.java  BlazeSDLEventHandler.java
blazesdl/api/impl/: BlazeSDLAPIImpl.java
blazesdl/api/resources/: fabric.mod.json
combine/backend/minecraft/clipboard/1.21.11/: BUILD.bazel  ClipboardHandlerImpl.kt
combine/backend/minecraft/clipboard/26.1/: BUILD.bazel  ClipboardHandlerImpl.kt
combine/backend/minecraft/dispatcher/1.21.8/: BUILD.bazel  GameDispatcher.kt
combine/backend/minecraft/dispatcher/26.1/: BUILD.bazel  GameDispatcher.kt
combine/backend/minecraft/drawable/1.21.11/: BUILD.bazel  VanillaDrawableProviderImpl.kt
combine/backend/minecraft/drawable/26.1/: BUILD.bazel  (+1 more)
combine/backend/minecraft/versions/: BUILD.bazel
game/26.1/: BUILD.bazel  maven_install_fabric.json
rule/access_widener_transformer/: AccessWidenerTransformer.java  BUILD.bazel
rule/create_jar/: BUILD.bazel  JarCreatorWorker.java
rule/neoforge/jij_merger/: BUILD.bazel  JarInJarMerger.java
rule/update_log_extractor/: BUILD.bazel  UpdateLogExtractor.java
rule/vineflower/: BUILD.bazel  DecompilerWrapper.java
touchcontroller/: BUILD.bazel  NEWS-en.md  NEWS-zh.md  properties.bzl
touchcontroller/common/: BUILD.bazel
touchcontroller/common/config/: BUILD.bazel  GlobalConfig.kt
touchcontroller/common/config/data/: StatusConfig.kt
touchcontroller/common/config/holder/: BUILD.bazel  GlobalConfigHolder.kt
touchcontroller/common/config/platform/: BUILD.bazel  BlazeSDLPlatformConfig.kt  PlatformConfig.kt  PlatformConfigProvider.kt
touchcontroller/common/config/preset/: PresetManager.kt
touchcontroller/common/control/action/: BUILD.bazel
touchcontroller/common/control/builtin/: BUILD.bazel
touchcontroller/common/event/block/: BlockBreakEvents.kt
touchcontroller/common/event/connection/: BUILD.bazel  ConnectionEvents.kt
touchcontroller/common/event/render/: RenderEvents.kt
touchcontroller/common/gal/action/: GameAction.kt
touchcontroller/common/layout/widget/: BUILD.bazel
touchcontroller/common/platform/blazesdl/: BUILD.bazel  BlazeSDLPlatform.kt
touchcontroller/common/platform/provider/: BUILD.bazel  PlatformProvider.kt
touchcontroller/common/platform/warning/: BUILD.bazel  WarningProvider.kt
touchcontroller/proxy/client/core/: proxy-client.pom
touchcontroller/proxy/server/common/: event.cpp  event.hpp  protocol.cpp  protocol.hpp
touchcontroller/proxy/server/linux/: wayland.cpp  wayland.hpp
touchcontroller/proxy/server/windows/: input.cpp  input.hpp  lib-legacy.cpp  lib.cpp  lib.hpp
touchcontroller/resources/lang/: en_us.json  ru_ru.json  uk_ua.json  zh_cn.json  zh_tw.json
touchcontroller/versions/1.21.11/event/: KeyboardInputEvents.kt
touchcontroller/versions/1.21.11/extension/: GameModeWithBreakingProgress.java
touchcontroller/versions/1.21.11/fabric/: BUILD.bazel  TouchController.kt
touchcontroller/versions/1.21.11/gal/: AbstractKeyBindingHandlerImpl.kt  BUILD.bazel  ChatMessageProviderImpl.kt  CreativeTabsProviderImpl.kt  CrosshairRendererImpl.kt  DefaultItemListProviderImpl.kt  EntityItemProviderImpl.kt  EntityTypeImpl.kt  GameActionImpl.kt  ItemDataComponentTypeProviderImpl.kt  ItemProviderImpl.kt  ItemSubclassImpl.kt  PlayerHandleImpl.kt
touchcontroller/versions/1.21.11/mixin/: BUILD.bazel  ClientInputAccessor.java  ControlsScreenMixin.java  GameRendererInvoker.java  InGameHudMixin.java  KeyMappingAccessor.java  LocalPlayerMixin.java  MinecraftMixin.java  MultiPlayerGameModeMixin.java
touchcontroller/versions/1.21.11/widget/: BUILD.bazel  RawTextureIconImpl.kt
touchcontroller/versions/26.1/event/: KeyboardInputEvents.kt
touchcontroller/versions/26.1/extension/: ChatComponentWithMessages.java  ClickableKeyBinding.java  SyncableGameMode.java
touchcontroller/versions/26.1/fabric/: BUILD.bazel  TouchController.kt  TouchControllerModMenuApiImpl.kt
touchcontroller/versions/26.1/gal/: AbstractKeyBindingHandlerImpl.kt  BUILD.bazel  ChatMessageProviderImpl.kt  CreativeTabsProviderImpl.kt  CrosshairRendererImpl.kt  DefaultItemListProviderImpl.kt  EntityItemProviderImpl.kt  EntityTypeImpl.kt  GameActionImpl.kt  ItemDataComponentTypeProviderImpl.kt  ItemProviderImpl.kt  ItemSubclassImpl.kt  PlayerHandleImpl.kt
touchcontroller/versions/26.1/mixin/: BUILD.bazel  ChatComponentMixin.java  ClientInputAccessor.java  ControlsScreenMixin.java  InGameHudMixin.java  InputConstantsMixin.java  KeyMappingAccessor.java  LocalPlayerMixin.java  MultiPlayerGameModeMixin.java
touchcontroller/versions/26.1/widget/: BUILD.bazel  RawTextureIconImpl.kt
touchcontroller/versions/event/1.21.11/: BUILD.bazel
touchcontroller/versions/event/26.1/: BUILD.bazel
touchcontroller/versions/extension/1.21.11/: BUILD.bazel  ChatComponentWithMessages.java  ClickableKeyBinding.java  SyncableGameMode.java
touchcontroller/versions/extension/26.1/: BUILD.bazel  GameModeWithBreakingProgress.java
touchcontroller/versions/fabric/1.21.11/: BUILD.bazel  KeyBindingMixin.java  TouchController.kt  TouchControllerModMenuApiImpl.kt
touchcontroller/versions/fabric/26.1/: BUILD.bazel  KeyBindingMixin.java  TouchController.kt
touchcontroller/versions/gal/1.21.11/: BUILD.bazel
touchcontroller/versions/gal/26.1/: BUILD.bazel
touchcontroller/versions/mixin/1.21.11/: BUILD.bazel  ChatComponentMixin.java  DisableMouseDirectionMixin.java  InGameHudMixin.java  InputConstantsMixin.java  KeyboardInputMixin.java  MultiPlayerGameModeMixin.java  OptionsSubScreenAccessor.java
touchcontroller/versions/mixin/26.1/: BUILD.bazel  CameraAccessor.java  DisableMouseDirectionMixin.java  InGameHudMixin.java  InputConstantsMixin.java  KeyboardInputMixin.java  MinecraftMixin.java  MultiPlayerGameModeMixin.java  OptionsSubScreenAccessor.java
touchcontroller/versions/widget/1.21.11/: BUILD.bazel
touchcontroller/versions/widget/26.1/: BUILD.bazel
touchcontroller/wiki/src/mechanism/: slient-turning-head.md  touch-ring.md
(+403 files in other folders)
