load("//game:game.bzl", "game_version")

game_version(
    name = "game",
    client = "@minecraft//26.1-pre-3:client",
    client_assets = "@minecraft_assets//:assets_26.1-pre-3",
    client_assets_version = "@minecraft_assets//:version_26.1-pre-3",
    client_libraries = "@minecraft//26.1-pre-3:client_libraries",
    neoforge = "@neoforge_26_1//:compiled_with_neoforge",
    server = "@minecraft//26.1-pre-3:server",
    version = "26.1-pre-3",
    visibility = ["//visibility:public"],
)
