load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "access_widener_transformer",
    srcs = ["AccessWidenerTransformer.java"],
    jvm_flags = ["-Duser.timezone=UTC"],
    main_class = "top.fifthlight.fabazel.accesswidenertransformer.AccessWidenerTransformer",
    visibility = ["//visibility:public"],
    deps = [
        "//rule/worker_api",
        "@maven//:net_fabricmc_class_tweaker",
        "@maven//:org_jspecify_jspecify",
        "@maven//:org_ow2_asm_asm",
    ],
)
