load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "create_jar",
    srcs = ["JarCreator.java"],
    jvm_flags = ["-Duser.timezone=UTC"],
    main_class = "top.fifthlight.fabazel.jarcreator.JarCreator",
    visibility = ["//visibility:public"],
)

java_binary(
    name = "create_jar_worker",
    srcs = [
        "JarCreator.java",
        "JarCreatorWorker.java",
    ],
    jvm_flags = ["-Duser.timezone=UTC"],
    main_class = "top.fifthlight.fabazel.jarcreator.JarCreatorWorker",
    visibility = ["//visibility:public"],
    deps = [
        "//rule/worker_api",
        "@maven//:org_jspecify_jspecify",
    ],
)
