load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "vineflower",
    srcs = glob(["*.java"]),
    jvm_flags = ["-Duser.timezone=UTC"],
    main_class = "top.fifthlight.fabazel.decompiler.DecompilerWrapper",
    visibility = ["//visibility:public"],
    deps = [
        "//:picocli",
        "//rule/worker_api",
        "@fabric_loom//:vineflower_tiny_javadoc_provider",
        "@maven//:org_jspecify_jspecify",
        "@maven//:org_vineflower_vineflower",
    ],
)
