load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "jij_merger",
    srcs = ["JarInJarMerger.java"],
    jvm_flags = ["-Duser.timezone=UTC"],
    main_class = "top.fifthlight.armorstand.jijmerger.JarInJarMerger",
    visibility = ["//visibility:public"],
    deps = [
        "//rule/worker_api",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:org_jspecify_jspecify",
    ],
)
