load("//rule:merge_library.bzl", "merge_library_group")

common_deps = [
    "//combine/core/data",
    "//combine/core/input/key",
    "//combine/core/input/pointer",
    "//combine/core/input/text",
    "//combine/core/node",
    "//combine/core/paint",
    "//combine/core/screen",
    "//combine/core/sound",
    "//combine/data",
    "//combine/item/data",
    "//combine/item/paint",
    "//combine/style",
    "//combine/theme/vanilla",
]

merge_library_group(
    name = "1.21.8",
    visibility = ["//visibility:public"],
    deps = [
        "//combine/backend/minecraft/clipboard/1.21.8",
        "//combine/backend/minecraft/dispatcher/1.21.8",
        "//combine/backend/minecraft/drawable/1.21.8",
        "//combine/backend/minecraft/identifier/1.21.8",
        "//combine/backend/minecraft/item/1.21.8",
        "//combine/backend/minecraft/keycode/1.21.8",
        "//combine/backend/minecraft/render/1.21.8",
        "//combine/backend/minecraft/screen/1.21.8",
        "//combine/backend/minecraft/sound/1.21.8",
        "//combine/backend/minecraft/text/1.21.8",
        "//combine/backend/minecraft/textbuilder/1.21.8",
        "//combine/backend/minecraft/textmeasurer/1.21.8",
    ] + common_deps,
)

merge_library_group(
    name = "1.21.11",
    visibility = ["//visibility:public"],
    deps = [
        "//combine/backend/minecraft/clipboard/1.21.11",
        "//combine/backend/minecraft/dispatcher/1.21.11",
        "//combine/backend/minecraft/drawable/1.21.11",
        "//combine/backend/minecraft/identifier/1.21.11",
        "//combine/backend/minecraft/item/1.21.11",
        "//combine/backend/minecraft/keycode/1.21.11",
        "//combine/backend/minecraft/render/1.21.11",
        "//combine/backend/minecraft/screen/1.21.11",
        "//combine/backend/minecraft/sound/1.21.11",
        "//combine/backend/minecraft/text/1.21.11",
        "//combine/backend/minecraft/textbuilder/1.21.11",
        "//combine/backend/minecraft/textmeasurer/1.21.11",
    ] + common_deps,
)

merge_library_group(
    name = "26.1",
    visibility = ["//visibility:public"],
    deps = [
        "//combine/backend/minecraft/clipboard/26.1",
        "//combine/backend/minecraft/dispatcher/26.1",
        "//combine/backend/minecraft/drawable/26.1",
        "//combine/backend/minecraft/identifier/26.1",
        "//combine/backend/minecraft/item/26.1",
        "//combine/backend/minecraft/keycode/26.1",
        "//combine/backend/minecraft/render/26.1",
        "//combine/backend/minecraft/screen/26.1",
        "//combine/backend/minecraft/sound/26.1",
        "//combine/backend/minecraft/text/26.1",
        "//combine/backend/minecraft/textbuilder/26.1",
        "//combine/backend/minecraft/textmeasurer/26.1",
    ] + common_deps,
)
