load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "platform",
    srcs = glob(["*.kt"]),
    expect = True,
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        "//:kotlin_serialization",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
)
