load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "connection",
    srcs = glob(["*.kt"]),
    merge_deps = [
        "//touchcontroller/common/config",
        "//touchcontroller/common/config/data",
        "//touchcontroller/common/config/holder",
        "//touchcontroller/common/gal/action",
        "//touchcontroller/common/platform",
        "//touchcontroller/common/platform/provider",
        "//touchcontroller/common/platform/proxy",
        "//touchcontroller/common/platform/warning",
        "//touchcontroller/resources/lang:text_binding",
    ],
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        "//combine/core/data",
    ],
)
