load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "widget",
    srcs = glob(["*.kt"]),
    kotlinc_opts = "//touchcontroller/common:kotlinc_opts",
    merge_deps = [
        "//touchcontroller/common/layout",
        "//touchcontroller/common/layout/align",
        "//touchcontroller/resources/texture:texture_set_lib",
        "//touchcontroller/common/gal/paint",
        "//touchcontroller/common/config/layout",
        "//touchcontroller/common/gal/feature",
        "//touchcontroller/common/gal/player",
        "//touchcontroller/common/config/condition",
        "//touchcontroller/common/config/data",
        "//touchcontroller/common/config/preset/info",
        "//touchcontroller/common/control",
        "//touchcontroller/common/control/property",
        "//touchcontroller/common/gal/key",
        "//touchcontroller/common/gal/view",
        "//touchcontroller/common/layout/click",
        "//touchcontroller/common/layout/data",
        "//touchcontroller/common/layout/queue",
        "//touchcontroller/common/layout/widget/button",
        "//touchcontroller/common/state",
        "//touchcontroller/common/util/uuid",
    ],
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        "//combine/core/paint",
        "//combine/data",
    ],
)
