load("//rule:merge_library.bzl", "merge_library_group")

merge_library_group(
    name = "gal",
    visibility = ["//visibility:public"],
    deps = [
        "//touchcontroller/versions/1.21.11/gal/action",
        "//touchcontroller/versions/1.21.11/gal/chat",
        "//touchcontroller/versions/1.21.11/gal/creativetab",
        "//touchcontroller/versions/1.21.11/gal/entity",
        "//touchcontroller/versions/1.21.11/gal/feature",
        "//touchcontroller/versions/1.21.11/gal/gameconfig",
        "//touchcontroller/versions/1.21.11/gal/gamestate",
        "//touchcontroller/versions/1.21.11/gal/item",
        "//touchcontroller/versions/1.21.11/gal/itemlist",
        "//touchcontroller/versions/1.21.11/gal/key",
        "//touchcontroller/versions/1.21.11/gal/library",
        "//touchcontroller/versions/1.21.11/gal/paint",
        "//touchcontroller/versions/1.21.11/gal/player",
        "//touchcontroller/versions/1.21.11/gal/view",
        "//touchcontroller/versions/1.21.11/gal/window",
    ],
)
