load("//rule:merge_library.bzl", "merge_library_group")

merge_library_group(
    name = "gal",
    visibility = ["//visibility:public"],
    deps = [
        "//touchcontroller/versions/26.1/gal/action",
        "//touchcontroller/versions/26.1/gal/chat",
        "//touchcontroller/versions/26.1/gal/creativetab",
        "//touchcontroller/versions/26.1/gal/entity",
        "//touchcontroller/versions/26.1/gal/feature",
        "//touchcontroller/versions/26.1/gal/gameconfig",
        "//touchcontroller/versions/26.1/gal/gamestate",
        "//touchcontroller/versions/26.1/gal/item",
        "//touchcontroller/versions/26.1/gal/itemlist",
        "//touchcontroller/versions/26.1/gal/key",
        "//touchcontroller/versions/26.1/gal/library",
        "//touchcontroller/versions/26.1/gal/paint",
        "//touchcontroller/versions/26.1/gal/player",
        "//touchcontroller/versions/26.1/gal/view",
        "//touchcontroller/versions/26.1/gal/window",
    ],
)
