load("//rule:merge_library.bzl", "merge_library_group")

merge_library_group(
    name = "1.21.11",
    visibility = ["//visibility:public"],
    deps = [
        "//touchcontroller/versions/gal/action/1.21.11",
        "//touchcontroller/versions/gal/chat/1.21.11",
        "//touchcontroller/versions/gal/creativetab/1.21.11",
        "//touchcontroller/versions/gal/entity/1.21.11",
        "//touchcontroller/versions/gal/feature/1.21.11",
        "//touchcontroller/versions/gal/gameconfig/1.21.11",
        "//touchcontroller/versions/gal/gamestate/1.21.11",
        "//touchcontroller/versions/gal/item/1.21.11",
        "//touchcontroller/versions/gal/itemlist/1.21.11",
        "//touchcontroller/versions/gal/key/1.21.11",
        "//touchcontroller/versions/gal/library/1.21.11",
        "//touchcontroller/versions/gal/paint/1.21.11",
        "//touchcontroller/versions/gal/player/1.21.11",
        "//touchcontroller/versions/gal/view/1.21.11",
        "//touchcontroller/versions/gal/window/1.21.11",
    ],
)
