load("//rule:merge_library.bzl", "merge_library_group")

merge_library_group(
    name = "26.1",
    visibility = ["//visibility:public"],
    deps = [
        "//touchcontroller/versions/gal/action/26.1",
        "//touchcontroller/versions/gal/chat/26.1",
        "//touchcontroller/versions/gal/creativetab/26.1",
        "//touchcontroller/versions/gal/entity/26.1",
        "//touchcontroller/versions/gal/feature/26.1",
        "//touchcontroller/versions/gal/gameconfig/26.1",
        "//touchcontroller/versions/gal/gamestate/26.1",
        "//touchcontroller/versions/gal/item/26.1",
        "//touchcontroller/versions/gal/itemlist/26.1",
        "//touchcontroller/versions/gal/key/26.1",
        "//touchcontroller/versions/gal/library/26.1",
        "//touchcontroller/versions/gal/paint/26.1",
        "//touchcontroller/versions/gal/player/26.1",
        "//touchcontroller/versions/gal/view/26.1",
        "//touchcontroller/versions/gal/window/26.1",
    ],
)
