load("//rule:merge_library.bzl", "java_merge_library")

java_merge_library(
    name = "26.1",
    srcs = glob(["*.java"]),
    merge_deps = [
        "//touchcontroller/common/config/data",
        "//touchcontroller/common/config/holder",
        "//touchcontroller/common/event/render",
        "//touchcontroller/common/model",
        "//touchcontroller/common/ui/config/screen",
        "//touchcontroller/common/util/crosshair",
        "//touchcontroller/versions/event/26.1",
        "//touchcontroller/versions/extension/26.1",
    ],
    resource_strip_prefix = "touchcontroller/versions/mixin/26.1/resources",
    resources = ["resources/touchcontroller.mixins.json"],
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        "//combine/backend/minecraft/item/26.1",
        "//combine/backend/minecraft/render/26.1",
        "//combine/backend/minecraft/text/26.1",
        "//game/26.1:game_client",
        "//game/26.1:game_client_libraries",
        "@maven_fabric_26_1//:net_fabricmc_sponge_mixin",
    ],
)
