load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "1.21.8",
    srcs = ["GameDispatcher.kt"],
    actual = True,
    merge_deps = [
        "//combine/core/util/dispatcher",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//combine/backend/minecraft/game/1.21.8",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
)
