load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "26.1",
    srcs = ["GameDispatcher.kt"],
    actual = True,
    merge_deps = [
        "//combine/core/util/dispatcher",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//combine/backend/minecraft/game/26.1",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
)
