load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "1.21.11",
    srcs = glob(["*.kt"]),
    actual = True,
    merge_deps = [
        "//combine/data",
        "//combine/style",
        "//combine/theme/vanilla",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//combine/backend/minecraft/game/1.21.11",
        "//combine/backend/minecraft/render/1.21.11",
    ],
)
