load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "1.21.8",
    srcs = ["KeyCodeMapping.kt"],
    merge_deps = [
        "//combine/core/input/key",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//game/1.21.8:game_client_libraries",
    ],
)
